[project]
name = "agi-cluster"
description = "agi-cluster a framework for AGI"
version = "0.3.58"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "Jean-Pierre Morard", email = "focus@thalesgroup.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
keywords = [
    "jupyter",
    "mlflow",
    "asyncio",
    "dask",
    "rapids",
    "streamlit",
    "distributed",
    "cython",
    "cluster",
    "dataframe",
    "dataset",
    "loadbalancing",
    "genai",
    "copilot",
    "agi",
    "pycharm",
    "datascience",
]
dependencies = [
    "scp",
    "scikit-learn",
    "parso",
    "cython",
    "setuptools",
    "msgpack",
    "numba",
    "py7zr",
    "agi-env",
    "python-dotenv",
    "tomli",
    "logging",
    "dask[distributed]",
    "cython",
    "wheel",
    "scipy==1.15.2",
    "psutil",
    "typing-inspection>=0.4.1",
    "jupyter",
    "mypy",
    "numba",
    "pydantic",
    "requests",
    "asyncssh",
]

[project.urls]
Documentation = "https://thalesgroup.github.io/agilab"
Source = "https://github.com/ThalesGroup/agilab/tree/main/src/agilab/fwk/core"
Tracker = "https://github.com/ThalesGroup/agilab/issue"

[dependency-groups]
dev = [
    "agi-cluster",
    "black",
    "pytest",
    "licensecheck",
    "pytest-local-badge",
    "pytest-cov",
    "pytest-asyncio",
    "polars",
    "pandas",
    "fastparquet",
    "pytest-cov"
]


[tool.uv.sources.agi-env]
path = "../env"
editable = true

[tool.uv.sources.agi-cluster]
path = "."
editable = true

[tool.mypy]
mypy_path = [
    "stubs",
]
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pyment]
source_dir = "src"
format = "google"
