[project]
name = "view-autoencoder-latenspace"
version = "2025.12.12"
requires-python = "==3.12.12"
dependencies = [
    "barviz>=1.2.2",
    "streamlit>=1.55.0",
    "watchdog>=6.0.0",
    "agi-env",
    "sqlalchemy>=2.0.43",
    "keras>=3.11.3",
    "tensorflow==2.19.1",
    "scikit-learn>=1.7.2",
]

[tool.uv.sources]
agi-env = { path = "../../core/agi-env", editable = true }
