[project]
name = "agi-page-latent-space"
version = "2025.12.12"
description = "AGILAB page bundle for latent-space projection and autoencoder exploration."
readme = { text = "AGILAB page bundle for latent-space projection and autoencoder exploration.", content-type = "text/markdown" }
requires-python = "==3.12.12"
dependencies = [
    "barviz>=1.2.2",
    "agi-gui",
    "sqlalchemy>=2.0.43",
    "keras>=3.11.3",
    "tensorflow==2.19.1",
    "scikit-learn>=1.7.2",
]

[tool.uv.sources]
agi-gui = { path = "../../lib/agi-gui", editable = true }
agi-env = { path = "../../core/agi-env", editable = true }
