[project]
name = "agi-page-latent-space"
version = "2025.12.12"
description = "AGILAB page bundle for latent-space projection and autoencoder exploration."
readme = { text = "AGILAB page bundle for latent-space projection and autoencoder exploration.", content-type = "text/markdown" }
requires-python = ">=3.12,<3.13"
dependencies = [
    "agi-env>=2026.05.12.post3,<2027.0",
    "agi-gui>=2026.05.12.post3,<2027.0",
    "barviz>=1.2.2",
    "sqlalchemy>=2.0.43",
    "keras>=3.11.3",
    "tensorflow==2.19.1",
    "scikit-learn>=1.7.2",
]

[project.entry-points."agilab.pages"]
view_autoencoder_latentspace = "view_autoencoder_latentspace:bundle_root"

[tool.uv.sources]
agi-gui = { path = "../../lib/agi-gui", editable = true }
agi-env = { path = "../../core/agi-env", editable = true }
