[project]
name = "agi-page-latent-space"
version = "2025.12.12"
description = "AGILAB page bundle for latent-space projection and autoencoder exploration."
readme = { text = "AGILAB page bundle for latent-space projection and autoencoder exploration.", content-type = "text/markdown" }
requires-python = ">=3.12,<3.13"
keywords = [
    "agilab",
    "thalesgroup",
    "streamlit",
    "analysis",
    "page-bundle",
    "reproducibility",
]
dependencies = [
    "agi-pages>=2026.05.30,<2027.0",
    "agi-env>=2026.05.12.post3,<2027.0",
    "agi-node>=2026.05.12.post3,<2027.0",
    "agi-gui>=2026.05.12.post3,<2027.0",
    "barviz>=1.2.2,<1.3",
    "sqlalchemy>=2.0.43,<3",
    "keras>=3.11.3,<4",
    "tensorflow>=2.20,<2.21",
    "scikit-learn>=1.7.2,<2",
]

[project.entry-points."agilab.pages"]
view_autoencoder_latentspace = "view_autoencoder_latentspace:bundle_root"

[project.urls]
Documentation = "https://thalesgroup.github.io/agilab"
Source = "https://github.com/ThalesGroup/agilab/tree/main/src/agilab/apps-pages/view_autoencoder_latentspace"
Issues = "https://github.com/ThalesGroup/agilab/issues"
Homepage = "https://github.com/ThalesGroup/agilab"
Repository = "https://github.com/ThalesGroup/agilab"
Discussions = "https://github.com/ThalesGroup/agilab/discussions"
Changelog = "https://github.com/ThalesGroup/agilab/releases"

[tool.uv.sources]
agi-pages = { path = "../../lib/agi-pages", editable = true }
agi-gui = { path = "../../lib/agi-gui", editable = true }
agi-env = { path = "../../core/agi-env", editable = true }
agi-node = { path = "../../core/agi-node", editable = true }
