[project]
name = "view-barycentric-graph"
version = "2025.12.12"
requires-python = ">=3.13"
dependencies = [
    "agi-gui",
    "plotly>=6.3.0",
    "barviz>=1.2.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16,<2",
    "sqlalchemy>=2.0.43",
]

[tool.uv.sources]
agi-gui = { path = "../../lib/agi-gui", editable = true }
agi-env = { path = "../../core/agi-env", editable = true }
