[project]
name = "view-data-io-decision"
version = "0.1.0"
description = "AGILAB page bundle for data I/O decision evidence."
readme = { text = "AGILAB page bundle for data I/O decision evidence.", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
    "agi-env>=2026.05.12.post3,<2027.0",
    "agi-gui>=2026.05.12.post3,<2027.0",
    "pandas>=2.3.0",
]

[project.entry-points."agilab.pages"]
view_data_io_decision = "view_data_io_decision:bundle_root"

[tool.uv.sources]
agi-gui = { path = "../../lib/agi-gui", editable = true }
agi-env = { path = "../../core/agi-env", editable = true }
