[project]
name = "agi-page-decision-evidence"
version = "2026.05.17"
description = "AGILAB page bundle for decision evidence review."
readme = { text = "AGILAB page bundle for decision evidence review.", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
    "agi-env>=2026.05.12.post3,<2027.0",
    "agi-gui>=2026.05.12.post3,<2027.0",
    "pandas>=2.3.0",
]

[project.entry-points."agilab.pages"]
view_data_io_decision = "view_data_io_decision:bundle_root"



[tool.uv.sources]
agi-gui = { path = "../../lib/agi-gui", editable = true }
agi-env = { path = "../../core/agi-env", editable = true }
