[project]
name = "view-inference-analysis"
version = "2026.04.17"
requires-python = ">=3.13"
dependencies = [
    "agi-gui",
    "pandas>=2.3.0",
    "plotly>=6.3.0",
]

[tool.uv.sources]
agi-gui = { path = "../../lib/agi-gui", editable = true }
agi-env = { path = "../../core/agi-env", editable = true }
