[project]
name = "agi-page-geospatial-map"
version = "2026.05.17"
description = "AGILAB page bundle for 2D geospatial map exploration."
readme = { text = "AGILAB page bundle for 2D geospatial map exploration.", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
    "agi-gui>=2026.05.12.post3,<2027.0",
    "agi-node>=2026.05.12.post3,<2027.0",
    "plotly>=6.3.0",
    "sqlalchemy>=2.0.43",
]

[project.entry-points."agilab.pages"]
view_maps = "view_maps:bundle_root"



[tool.uv.sources]
agi-gui = { path = "../../lib/agi-gui", editable = true }
agi-env = { path = "../../core/agi-env", editable = true }
agi-node = { path = "../../core/agi-node", editable = true }
