[project]
name = "agi-page-geospatial-3d"
version = "2026.05.21.post1"
description = "AGILAB page bundle for 3D geospatial exploration."
readme = { text = "AGILAB page bundle for 3D geospatial exploration.", content-type = "text/markdown" }
requires-python = ">=3.11"
keywords = [
    "agilab",
    "thalesgroup",
    "streamlit",
    "analysis",
    "page-bundle",
    "reproducibility",
]
dependencies = [
    "agi-gui>=2026.05.12.post3,<2027.0",
    "agi-node>=2026.05.12.post3,<2027.0",
    "plotly>=6.3.0",
    "sqlalchemy>=2.0.43",
    "geojson>=3.2.0",
]

[project.entry-points."agilab.pages"]
view_maps_3d = "view_maps_3d:bundle_root"





[project.urls]
Documentation = "https://thalesgroup.github.io/agilab"
Source = "https://github.com/ThalesGroup/agilab/tree/main/src/agilab/apps-pages/view_maps_3d"
Issues = "https://github.com/ThalesGroup/agilab/issues"
Homepage = "https://github.com/ThalesGroup/agilab"
Repository = "https://github.com/ThalesGroup/agilab"
Discussions = "https://github.com/ThalesGroup/agilab/discussions"
Changelog = "https://github.com/ThalesGroup/agilab/releases"


[tool.uv.sources]
agi-gui = { path = "../../lib/agi-gui", editable = true }
agi-env = { path = "../../core/agi-env", editable = true }
agi-node = { path = "../../core/agi-node", editable = true }
