[project]
name = "agi-page-pytorch-playground"
version = "2026.05.20"
description = "Opt-in AGILAB page bundle for interactive PyTorch classifier experiments."
readme = { text = "Opt-in AGILAB page bundle for interactive PyTorch classifier experiments.", content-type = "text/markdown" }
requires-python = ">=3.12"
keywords = [
    "agilab",
    "thalesgroup",
    "streamlit",
    "analysis",
    "page-bundle",
    "reproducibility",
]
dependencies = [
    "agi-gui>=2026.05.12.post3,<2027.0",
    "numpy>=2.2",
    "pandas>=2.3.0",
    "plotly>=6.3.0",
    "torch>=2.8.0",
]

[project.entry-points."agilab.pages"]
view_pytorch_playground = "view_pytorch_playground:bundle_root"





[project.urls]
Documentation = "https://thalesgroup.github.io/agilab"
Source = "https://github.com/ThalesGroup/agilab/tree/main/src/agilab/apps-pages/view_pytorch_playground"
Issues = "https://github.com/ThalesGroup/agilab/issues"
Homepage = "https://github.com/ThalesGroup/agilab"
Repository = "https://github.com/ThalesGroup/agilab"
Discussions = "https://github.com/ThalesGroup/agilab/discussions"
Changelog = "https://github.com/ThalesGroup/agilab/releases"

[tool.uv.sources]
agi-gui = { path = "../../lib/agi-gui", editable = true }
