[project]
name = "view-queue-resilience"
version = "0.1.0"
description = "AGILAB page bundle for queue resilience analysis."
readme = { text = "AGILAB page bundle for queue resilience analysis.", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
    "agi-gui>=2026.05.12.post3,<2027.0",
    "agi-node>=2026.05.12.post3,<2027.0",
    "pandas>=2.3.0",
]

[project.entry-points."agilab.pages"]
view_queue_resilience = "view_queue_resilience:bundle_root"

[tool.uv.sources]
agi-gui = { path = "../../lib/agi-gui", editable = true }
agi-env = { path = "../../core/agi-env", editable = true }
agi-node = { path = "../../core/agi-node", editable = true }
