[project]
name = "agi-page-queue-health"
version = "2026.05.16"
description = "AGILAB page bundle for queue health and resilience evidence."
readme = { text = "AGILAB page bundle for queue health and resilience evidence.", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
    "agi-gui>=2026.05.12.post3,<2027.0",
    "agi-node>=2026.05.12.post3,<2027.0",
    "pandas>=2.3.0",
]

[project.entry-points."agilab.pages"]
view_queue_resilience = "view_queue_resilience:bundle_root"


[tool.uv.sources]
agi-gui = { path = "../../lib/agi-gui", editable = true }
agi-env = { path = "../../core/agi-env", editable = true }
agi-node = { path = "../../core/agi-node", editable = true }
