[project]
name = "view-training-analysis"
version = "2026.04.09"
requires-python = ">=3.13"
dependencies = [
    "agi-gui",
    "pandas>=2.3.0",
    "plotly>=6.3.0",
    "tensorboard",
]

[tool.uv.sources]
agi-gui = { path = "../../lib/agi-gui", editable = true }
agi-env = { path = "../../core/agi-env", editable = true }
