[project]
name = "agi-page-training-report"
version = "2026.05.16"
description = "AGILAB page bundle for training run reporting."
readme = { text = "AGILAB page bundle for training run reporting.", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
    "agi-gui>=2026.05.12.post3,<2027.0",
    "pandas>=2.3.0",
    "plotly>=6.3.0",
    "tensorboard",
]

[project.entry-points."agilab.pages"]
view_training_analysis = "view_training_analysis:bundle_root"


[tool.uv.sources]
agi-gui = { path = "../../lib/agi-gui", editable = true }
agi-env = { path = "../../core/agi-env", editable = true }
