[project]
name = "view-uav-queue-analysis"
version = "2026.04.08"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.55.0",
    "watchdog>=6.0.0",
    "agi-env",
    "agi-node",
    "pandas>=2.3.0",
]

[tool.uv.sources]
agi-env = { path = "../../core/agi-env", editable = true }
agi-node = { path = "../../core/agi-node", editable = true }
