[project]
name = "your_agent_project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "your name", email = "your email"}
]

dependencies = [
 "setuptools",
    "cython",
    "parso",
    "py7zr",
    "python-dotenv",
    "ipython",
    "psutil",
]

[dependency-groups]
dev = [
    "black",
    "pytest",
    "pytest-cov",
    "pytest-local-badge",
    "pytest-asyncio",
    "licensecheck",
    "your_agent_project",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# do not remove
[tool.uv.sources.your_agent_project]
workspace = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
your_agent_project = [
    "**/*.ipynb",
    "**/*.json",
    "**/*.toml",
]

[tool.mypy]
mypy_path = ["stubs"]
disallow_untyped_defs = false
ignore_missing_imports = true


